# procon2021_comp

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: rust.yml
src/: basis.rs  fetch.rs  fragment.rs  grid.rs  image.rs  kaitou.rs  lib.rs  main.rs  map_fragment.rs  move_resolve.rs  pixel_match.rs  submit.rs
src/fragment/: map_fragment.rs  tests.rs
src/grid/: board.rs  cycles.rs  on_grid.rs  vec_on_grid.rs
src/grid/board/: finder.rs
src/move_resolve/: approx.rs  beam_search.rs  cycles.rs  dijkstra.rs  edges_nodes.rs  ida_star.rs  least_movements.rs  seg_tree.rs  state.rs  tests.rs
src/move_resolve/approx/: estimate.rs  gen.rs  route.rs
src/move_resolve/approx/estimate/: tests.rs
src/move_resolve/approx/route/: tests.rs
src/move_resolve/state/: completer.rs  cost_reducer.rs
src/pixel_match/: arrow.ascii  double_side.rs  gui.rs  shaker.rs
src/pixel_match/gui/: arrow.ascii  arrow_texture.rs  image_preview.rs
test_cases/: 01_a.txt  01_gen.cpp  01_gen.rs  01_q.ppm  02_a.txt  02_sampled.ppm
