[package]
name = "procon2021_comp"
version = "0.1.0"
authors = ["combnitnc"]
edition = "2018"
default-run = "procon2021_comp"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
easy-parallel = "3.1.0"
image = "0.23.14"
bitflags = "1.3.2"

reqwest = { version = "0.11.4", features = ["blocking"], optional = true }
dotenv = { version = "0.15.0", optional = true }
bytes = { version = "1.1.0", optional = true }

[features]
net = ["reqwest", "dotenv", "bytes"]

# comment out next line if you want to compile faster
default = ["net"]

[dev-dependencies]
rand = "0.8.4"

[profile.release]
codegen-units = 1
lto = "fat"
debug = true

[dependencies.sdl2]
version = "0.34"
default-features = false
features = ["ttf", "static-link", "use-vcpkg"]

[package.metadata.vcpkg]
dependencies = ["sdl2", "sdl2-ttf"]
git = "https://github.com/microsoft/vcpkg"
rev = "261c458af6e3eed5d099144aff95d2b5035f656b"

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md" }
